--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
-<!DOCTYPE html>  
-<html>  
-<head>  
-    <meta charset="utf-8" />  
-    <title></title>  
-  
-    <script src="https://kendo.cdn.telerik.com/2018.3.1017/js/jquery.min.js"></script>  
-</head>  
-<body>  
-    <h3> Azure function</h3>  
-    <label>Name: </label> <input type="text" id="txtName" />  
-    <button id="btnName">Click Me</button>  
-    <label id="message" style="color:green"></label>  
-    <script>  
-        $(document).ready(function () {  
-            $("#btnName").on("click", function () {  
-  $.ajax({  
-                    type: "GET",  
-                    url: "https://initvoting.azurewebsites.net/api/initvoting?id=73WakrfVbNJBaAmhQtEeDv",  
-                    data: JSON.stringify({  
-                        "name": $("#txtName").val(),  
-                    }),                     
-                    success: function (response) {                     
-                        $("#message").text(response);  
-                    },  
-            })     
- });           
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+
+    <script src="https://kendo.cdn.telerik.com/2018.3.1017/js/jquery.min.js"></script>
+</head>
+
+<body>
+    <h3> Azure function</h3>
+    <label>Name: </label> <input type="text" id="txtName" />
+    <button id="btnName">Click Me</button>
+    <label id="message" style="color:green"></label>
+    <script>
+        $(document).ready(function () {
+            $("#btnName").on("click", function () {
+                $("#message").text("");
+
+                $.ajax({
+                    type: "GET",
+                    url: "https://initvoting.azurewebsites.net/api/initvoting?id=73WakrfVbNJBaAmhQtEeDv",
+                    data: JSON.stringify({
+                        "name": $("#txtName").val(),
+                    }),
+                    success: function (response) {
+                        $("#message").text(response);
+                    },
+                })
+            });
         })  
-   </script>  
-</body>  
-</html>  
+    </script>
+</body>
+
+</html>
